--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "lint": "npx eslint ./player/js/**/*",
     "lint:fix": "npx eslint ./player/js/**/* --fix",
     "test:create": "node test/index.js",
-    "test:compare": "node test/index.js -s compare"
+    "test:compare": "node test/index.js -s compare",
+    "test:jest": "jest"
   },
   "keywords": [
     "animation",
@@ -36,6 +37,7 @@
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
     "express": "^4.18.2",
+    "jest": "^29.7.0",
     "pixelmatch": "^5.3.0",
     "pngjs": "^7.0.0",
     "puppeteer": "^20.5.0",
